# synthetic-media

./: .gitignore  README.md  pyproject.toml
ImageToText/: pyproject.toml
ImageToText/logs/: events.out.tfevents.1699346951.MacBook-Pro-1.local.88397.0  events.out.tfevents.1699348386.MacBook-Pro-1.local.89829.0
ImageToText/trainloop/: model.py  train_runner.py
VideoToText/: README.md  inference_slowfast.ipynb  inference_transformer.py  model.py  video_utils.py
image_tegging/: data_utils.py  train_runner.py
logs/: events.out.tfevents.1699340104.MacBook-Pro-1.local.80945.0
