[tool.poetry]
name = "image-tegging"
version = "0.1.0"
description = ""
authors = ["Anastasiya Strueva <astrueva@tourmalinecore.com>"]
readme = "README.md"
packages = [{include = "image_tegging"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.1"
torch = "^2.1.0"
tqdm = "^4.66.1"
evaluate = "^0.4.1"
transformers = "^4.35.0"
tensorboard = "^2.15.1"
nltk = "^3.8.1"
accelerate = "^0.24.1"
rouge-score = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
